@@ -1,122 +1,79 @@
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import java.util.List;
-import javax.annotation.Nullable;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Function;
 
-public class bns extends bmx<cdh> {
-   private static final int d = 200;
-   public static final float c = 0.5F;
-   @Nullable
-   private ht e;
-   private long f;
-   private int g;
-   private final List<ht> h = Lists.newArrayList();
+public class bns<E extends bll & cdk> extends bnc<E> {
+   private static final int c = 3;
+   private static final int d = 60;
+   private final Function<bll, Optional<bop>> e;
+   private final float f;
 
-   public bns() {
-      super(ImmutableMap.of(buh.n, bui.b, buh.m, bui.b, buh.f, bui.a));
+   public bns(Function<bll, Optional<bop>> $$0, float $$1, int $$2) {
+      super(Map.of(bum.n, bun.c, bum.m, bun.c, bum.aO, bun.c), $$2);
+      this.e = $$0;
+      this.f = $$1;
    }
 
-   protected boolean a(ame $$0, cdh $$1) {
-      if (!$$0.Y().b(crw.c)) {
-         return false;
-      } else if ($$1.gq().b() != cdk.g) {
+   @Override
+   protected boolean a(ami $$0, E $$1) {
+      return this.b($$1);
+   }
+
+   @Override
+   protected boolean a(ami $$0, E $$1, long $$2) {
+      return this.b($$1);
+   }
+
+   @Override
+   protected void d(ami $$0, E $$1, long $$2) {
+      this.e.apply($$1).ifPresent($$1x -> bne.a($$1, $$1x, this.f, 3));
+   }
+
+   @Override
+   protected void c(ami $$0, E $$1, long $$2) {
+      Optional<bop> $$3 = this.e.apply($$1);
+      if (!$$3.isEmpty()) {
+         bop $$4 = $$3.get();
+         double $$5 = $$4.a().f($$1.br());
+         if ($$5 < 3.0) {
+            clo $$6 = $$1.A().a(0, 1);
+            if (!$$6.b()) {
+               a($$1, $$6, a($$4));
+               if ($$1 instanceof bya $$7) {
+                  byb.a((bll)$$7).ifPresent($$2x -> this.a($$4, $$6, $$2x));
+               }
+
+               $$1.dP().a(bum.aO, 60);
+            }
+         }
+      }
+   }
+
+   private void a(bop $$0, clo $$1, amj $$2) {
+      hx $$3 = $$0.b().d();
+      al.X.a($$2, $$3, $$1);
+   }
+
+   private boolean b(E $$0) {
+      if ($$0.A().aj_()) {
          return false;
       } else {
-         ht.a $$2 = $$1.dn().j();
-         this.h.clear();
-
-         for (int $$3 = -1; $$3 <= 1; $$3++) {
-            for (int $$4 = -1; $$4 <= 1; $$4++) {
-               for (int $$5 = -1; $$5 <= 1; $$5++) {
-                  $$2.b($$1.ds() + (double)$$3, $$1.du() + (double)$$4, $$1.dy() + (double)$$5);
-                  if (this.a($$2, $$0)) {
-                     this.h.add(new ht($$2));
-                  }
-               }
-            }
-         }
-
-         this.e = this.a($$0);
-         return this.e != null;
+         Optional<bop> $$1 = this.e.apply($$0);
+         return $$1.isPresent();
       }
    }
 
-   @Nullable
-   private ht a(ame $$0) {
-      return this.h.isEmpty() ? null : this.h.get($$0.E_().a(this.h.size()));
+   private static ejz a(bop $$0) {
+      return $$0.a().b(0.0, 1.0, 0.0);
    }
 
-   private boolean a(ht $$0, ame $$1) {
-      dhi $$2 = $$1.a_($$0);
-      cva $$3 = $$2.b();
-      cva $$4 = $$1.a_($$0.d()).b();
-      return $$3 instanceof cwv && ((cwv)$$3).h($$2) || $$2.i() && $$4 instanceof cxx;
-   }
-
-   protected void a(ame $$0, cdh $$1, long $$2) {
-      if ($$2 > this.f && this.e != null) {
-         $$1.dP().a(buh.n, new bna(this.e));
-         $$1.dP().a(buh.m, new buk(new bna(this.e), 0.5F, 1));
+   public static void a(bll $$0, clo $$1, ejz $$2) {
+      ejz $$3 = new ejz(0.2F, 0.3F, 0.2F);
+      bne.a($$0, $$1, $$2, $$3, 0.2F);
+      csf $$4 = $$0.dN();
+      if ($$4.W() % 7L == 0L && $$4.z.j() < 0.9) {
+         float $$5 = ac.<Float>a(bya.d, $$4.F_());
+         $$4.a(null, $$0, aqv.g, aqw.g, 1.0F, $$5);
       }
-   }
-
-   protected void b(ame $$0, cdh $$1, long $$2) {
-      $$1.dP().b(buh.n);
-      $$1.dP().b(buh.m);
-      this.g = 0;
-      this.f = $$2 + 40L;
-   }
-
-   protected void c(ame $$0, cdh $$1, long $$2) {
-      if (this.e == null || this.e.a($$1.dl(), 1.0)) {
-         if (this.e != null && $$2 > this.f) {
-            dhi $$3 = $$0.a_(this.e);
-            cva $$4 = $$3.b();
-            cva $$5 = $$0.a_(this.e.d()).b();
-            if ($$4 instanceof cwv && ((cwv)$$4).h($$3)) {
-               $$0.a(this.e, true, $$1);
-            }
-
-            if ($$3.i() && $$5 instanceof cxx && $$1.gz()) {
-               bje $$6 = $$1.A();
-
-               for (int $$7 = 0; $$7 < $$6.b(); $$7++) {
-                  clj $$8 = $$6.a($$7);
-                  boolean $$9 = false;
-                  if (!$$8.b() && $$8.a(aro.aU) && $$8.d() instanceof cjc $$10) {
-                     dhi $$11 = $$10.e().o();
-                     $$0.b(this.e, $$11);
-                     $$0.a(dls.i, this.e, dls.a.a($$1, $$11));
-                     $$9 = true;
-                  }
-
-                  if ($$9) {
-                     $$0.a(null, (double)this.e.u(), (double)this.e.v(), (double)this.e.w(), aqr.fA, aqs.e, 1.0F, 1.0F);
-                     $$8.h(1);
-                     if ($$8.b()) {
-                        $$6.a($$7, clj.b);
-                     }
-                     break;
-                  }
-               }
-            }
-
-            if ($$4 instanceof cwv && !((cwv)$$4).h($$3)) {
-               this.h.remove(this.e);
-               this.e = this.a($$0);
-               if (this.e != null) {
-                  this.f = $$2 + 20L;
-                  $$1.dP().a(buh.m, new buk(new bna(this.e), 0.5F, 1));
-                  $$1.dP().a(buh.n, new bna(this.e));
-               }
-            }
-         }
-
-         this.g++;
-      }
-   }
-
-   protected boolean d(ame $$0, cdh $$1, long $$2) {
-      return this.g < 200;
    }
 }
